<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewTitle"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_16"
            android:text="@string/member_list"
            android:textColor="@color/colorDefault"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <EditText
            android:id="@+id/editTextSearch"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_16"
            android:background="@drawable/background_search_a12_10dp"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:padding="10dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            tools:ignore="Autofill"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textViewAddGuest"
            style="@style/TextViewStyle.Bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_24dp"
            android:background="?attr/selectableItemBackground"
            android:paddingHorizontal="10dp"
            android:paddingVertical="@dimen/dimen_8"
            android:text="@string/add_to_new_guest"
            android:textColor="@color/colorOrange"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_add"
            app:drawableTint="@color/colorOrange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextSearch"
            app:layout_goneMarginTop="0dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewGuest"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAddGuest"
            tools:itemCount="10"
            tools:listitem="@layout/select_customer_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>