<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/image_app"
        tools:context=".ui.loginActiviy.LoginByMailActivity">

        <ImageView
            android:id="@+id/imageViewLogo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:src="@drawable/logo_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="vertical"
            app:layout_constraintWidth_percent="0.5"
            app:layout_constraintEnd_toEndOf="@id/imageViewLogo"
            app:layout_constraintStart_toStartOf="@id/imageViewLogo"
            app:layout_constraintTop_toBottomOf="@id/imageViewLogo">

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <EditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:hint="@string/email"
                android:paddingStart="24dp"
                android:paddingVertical="26dp"
                android:background="@drawable/round_button"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                style="@style/TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/white"
                android:layout_marginTop="48dp"
                android:textSize="24sp" />

            <EditText
                style="@style/EditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:paddingStart="24dp"
                android:paddingVertical="26dp"
                android:layout_marginTop="8dp"
                android:inputType="textPassword"
                android:background="@drawable/round_button"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/ButtonStyle"
                android:text="@string/log_in"
                android:paddingVertical="20dp"
                android:paddingHorizontal="80dp"
                android:layout_marginTop="90dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="24sp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/white"/>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
